--- a/src/App.css
+++ b/src/App.css
@@ -19,6 +19,11 @@
     }
 }
 
+.body{
+    width:max-content;
+    min-width: 100%;
+}
+
     
 
 
@@ -99,7 +104,7 @@
 
 .navbar{
     height: 70px;
-    width: 100%;
+    min-width: 100%;
     /* right: 20px; */
     display: flex;
     align-items: center;
