--- a/src/components/Skills.css
+++ b/src/components/Skills.css
@@ -1,5 +1,5 @@
 .skills-container{
-    height: 100vh;
+    min-height: 100vh;
     display: flex;
     flex-direction: row;
     align-items: center;
