--- a/src/components/Tile.css
+++ b/src/components/Tile.css
@@ -33,6 +33,8 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
+    min-width: 150px;
+    min-height: 150px;
     width: 200px;
     height: 200px;
     overflow: hidden;
