--- a/src/components/Work.css
+++ b/src/components/Work.css
@@ -1,10 +1,14 @@
 .works-container{
     height: 110vh;
+    min-width: fit-content;
 }
+
+
 
 .work-container{
     display: flex;
     height: 90%;
+
     flex-direction: column;
     align-items: center;
     justify-content: space-around;
